// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GuestPeriodRow component > matches snapshot for period 'p1' 1`] = `
<DocumentFragment>
  <div
    class="col period-ordering"
  >
    2
  </div>
  <div
    class="col period-id"
  >
    p1
  </div>
  <div
    class="col period-stream"
  >
    Big Buck Bunny
  </div>
  <div
    class="col period-start"
  >
    <input
      class="form-control "
      disabled=""
      min="00:00:00"
      name="start_1"
      step="1"
      type="time"
    />
  </div>
  <div
    class="col period-duration"
  >
    <input
      class="form-control "
      disabled=""
      min="00:00:00"
      name="duration_1"
      step="1"
      type="time"
    />
  </div>
  <div
    class="col period-tracks"
  >
    <button
      aria-disabled="false"
      class="btn btn-sm m-1 btn-warning"
    >
      0/3 tracks
    </button>
  </div>
</DocumentFragment>
`;

exports[`GuestPeriodRow component > matches snapshot for period 'p2' 1`] = `
<DocumentFragment>
  <div
    class="col period-ordering"
  >
    1
  </div>
  <div
    class="col period-id"
  >
    p2
  </div>
  <div
    class="col period-stream"
  >
    Tears of Steel
  </div>
  <div
    class="col period-start"
  >
    <input
      class="form-control "
      disabled=""
      min="00:00:00"
      name="start_2"
      step="1"
      type="time"
    />
  </div>
  <div
    class="col period-duration"
  >
    <input
      class="form-control "
      disabled=""
      min="00:00:00"
      name="duration_2"
      step="1"
      type="time"
    />
  </div>
  <div
    class="col period-tracks"
  >
    <button
      aria-disabled="false"
      class="btn btn-sm m-1 btn-warning"
    >
      0/3 tracks
    </button>
  </div>
</DocumentFragment>
`;
